[package]
name = "email"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
edition = "2021"

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3"

[[bin]]
name = "lettre-simple"
path = "src/lettre-simple.rs"

[[bin]]
name = "lettre-use-gmail"
path = "src/lettre-use-gmail.rs"
