[package]
name = "http-client"
version = "0.1.0"
authors = ["hhatto <hhatto.jp@gmail.com>"]

[dependencies]
hyper = "*"
rustc-serialize = "0.3"
solicit = "0.4"
websocket = "0.20.2"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[[bin]]
name = "get-json-hyper"
path = "src/get-json-hyper.rs"

[[bin]]
name = "http-hyper"
path = "src/http-hyper.rs"

[[bin]]
name = "http2-hyper"
path = "src/http2-hyper.rs"

[[bin]]
name = "http2-solicit"
path = "src/http2-solicit.rs"

[[bin]]
name = "url"
path = "src/url.rs"

[[bin]]
name = "rust-websocket"
path = "src/rust-websocket.rs"

[[bin]]
name = "rust-websocket-server"
path = "src/rust-websocket-server.rs"
