[package]
name = "http-client"
version = "0.1.0"
authors = ["hhatto <hhatto.jp@gmail.com>"]
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
http = "0.2"
native-tls = "0.2.10"
tokio-tls = "0.3"
rustc-serialize = "0.3"
serde = "1"
serde_json = "1"
solicit = "0.4"
websocket = "0.26.5"
h2 = "0.3"
futures = "0.1"
rustls = "0.20"
tokio-rustls = "0.23"
webpki = "0.22"
webpki-roots = "*"
env_logger = "0.5.4"

[dependencies.ws]
version = "0.9"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[[bin]]
name = "get-json-hyper"
path = "src/get-json-hyper.rs"

[[bin]]
name = "http-hyper"
path = "src/http-hyper.rs"

[[bin]]
name = "http2-hyper"
path = "src/http2-hyper.rs"

[[bin]]
name = "http2-solicit"
path = "src/http2-solicit.rs"

[[bin]]
name = "url"
path = "src/url.rs"

[[bin]]
name = "rust-websocket"
path = "src/rust-websocket.rs"

[[bin]]
name = "rust-websocket-server"
path = "src/rust-websocket-server.rs"

[[bin]]
name = "ws-client"
path = "src/ws-client.rs"
