[package]
name = "networking"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]
ssh2 = "0.2"
unix_socket = "0.5"

[[bin]]
name = "ssh-command"
path = "src/ssh-command.rs"

[[bin]]
name = "scp"
path = "src/scp.rs"

[[bin]]
name = "uds-client"
path = "src/uds-client.rs"
