[package]
name = "nickelapp"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]
mysql = "*"
r2d2 = "0.7"
r2d2_sqlite = "0.0.6"
nickel_mustache = "*"
rustc-serialize = "0.3"
tera = "0.1.3"
redis = "*"

[dependencies.nickel]
version = "*"

[dependencies.nickel_mysql]
git = "https://github.com/hhatto/nickel-mysql.git"

[dependencies.nickel_sqlite]
git = "https://github.com/flosse/nickel-sqlite.git"

[dependencies.nickel_postgres]
git = "https://github.com/nickel-org/nickel-postgres.git"

[dependencies.nickel_redis]
git = "https://github.com/matthewbentley/nickel-redis.git"

[[bin]]
name = "with-mysql"
path = "src/with-mysql.rs"

[[bin]]
name = "with-sqlite"
path = "src/with-sqlite.rs"

[[bin]]
name = "with-mustache"
path = "src/with-mustache.rs"

[[bin]]
name = "with-tera"
path = "src/with-tera.rs"

[[bin]]
name = "with-postgres"
path = "src/with-postgres.rs"

[[bin]]
name = "with-redis"
path = "src/with-redis.rs"
