[package]
name = "serialize"
version = "0.1.0"
authors = ["Hideo Hattori <hattori-h@klab.com>"]

[dependencies]
yaml-rust = "*"
rustc-serialize = "0.3"
rmp = "^0.7"
rmp-serialize = "^0.7"

#[dependencies.msgpack]
#git = "https://github.com/mneumann/rust-msgpack.git"

[[bin]]
name = "parse-yaml"
path = "src/parse-yaml.rs"

[[bin]]
name = "msgpackrust"
path = "src/msgpackrust.rs"
