[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fast-woothee-pyo3"
version = "0.1.0"
description = "example of Python Extension Module using PyO3"
requires-python = ">=3.8"
authors = [
    { name = "Hideo Hattori", email = "hhatto.jp@gmail.com" }
]

[tool.maturin]
features = ["pyo3/extension-module"]
