[package]
name = "envlogger"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
time = { version = "0.3", features = ["formatting"] }

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "myformatter"
path = "src/myformatter.rs"
