[package]
name = "msgpack"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
rmp = "^0.8"
rmpv = "^0.4"
rmp-serialize = "^0.8"

[[bin]]
name = "msgpackrust"
path = "src/msgpackrust.rs"

[[bin]]
name = "msgpackrust_tomsgpack"
path = "src/msgpackrust_tomsgpack.rs"
